--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@ transition:.2s;
 </head>
 <body>
 
+<div class="container">
+<input type="text" id="input" placeholder="press enter to add tasks">
+<ul></ul>
+
+</div>
+
 <script type="text/javascript">
 
 $(document).ready(function(){
